# Generated by Django 5.2.10 on 2026-01-28 08:25

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('requests', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Report',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('reason', models.CharField(choices=[('payments', 'payments'), ('advertising', 'advertising'), ('prohibited_content', 'prohibited_content'), ('harassment', 'harassment'), ('other', 'other')], max_length=40)),
                ('description', models.CharField(blank=True, max_length=500)),
                ('status', models.CharField(choices=[('open', 'open'), ('in_review', 'in_review'), ('closed', 'closed')], default='open', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('reporter_user', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL)),
                ('request', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='requests.request')),
            ],
        ),
    ]
