# Generated by Django 5.2.10 on 2026-01-28 08:25

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('communities', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Request',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=120)),
                ('description', models.TextField()),
                ('category', models.CharField(max_length=60)),
                ('time_window_text', models.CharField(blank=True, max_length=120)),
                ('location_area_text', models.CharField(blank=True, max_length=120)),
                ('location_radius_km', models.IntegerField(blank=True, null=True)),
                ('status', models.CharField(choices=[('open', 'open'), ('in_progress', 'in_progress'), ('resolved', 'resolved'), ('cancelled', 'cancelled')], default='open', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('closed_at', models.DateTimeField(blank=True, null=True)),
                ('community', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='communities.community')),
                ('created_by_user', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='VolunteerOffer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('message', models.CharField(blank=True, max_length=280)),
                ('status', models.CharField(choices=[('offered', 'offered'), ('accepted', 'accepted'), ('rejected', 'rejected'), ('withdrawn', 'withdrawn')], default='offered', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('request', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='offers', to='requests.request')),
                ('volunteer_user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.AddField(
            model_name='request',
            name='accepted_offer',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='accepted_for', to='requests.volunteeroffer'),
        ),
        migrations.AddIndex(
            model_name='volunteeroffer',
            index=models.Index(fields=['request', 'status'], name='requests_vo_request_8145fd_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='volunteeroffer',
            unique_together={('request', 'volunteer_user')},
        ),
        migrations.AddIndex(
            model_name='request',
            index=models.Index(fields=['community', 'status'], name='requests_re_communi_b50a04_idx'),
        ),
        migrations.AddIndex(
            model_name='request',
            index=models.Index(fields=['community', 'category'], name='requests_re_communi_b685ad_idx'),
        ),
        migrations.AddIndex(
            model_name='request',
            index=models.Index(fields=['created_by_user'], name='requests_re_created_bd11c6_idx'),
        ),
    ]
